--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -14,7 +14,7 @@
   justify-content: space-evenly;
 
   background: var(--white); 
-  box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
   font-size: 8.5rem;
   text-align: center;
@@ -57,6 +57,21 @@
   transition: background-color 0.2s;
 }
 
-.countdownButton:hover{
+.countdownButton:not(:disabled):hover{
   background-color: var(--blue-dark);
+}
+
+.countdownButtonActive {
+  background-color: var(--white);
+  color: var(--title);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+  background-color: var(--red);
+}
+
+.countdownButton:disabled {
+  background-color: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
 }
