--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  --white: #fff;
+  --white: #FFF;
   --background: #F2F3F5;
   --gray-line: #DCDDE0;
   --text: #666666;
@@ -12,32 +18,25 @@
   --blue-twitter: #2AA9E0;
 }
 
-@media(max-width: 1888px){
-  html{
-    font-size: 93.75%
+@media(max-width: 1080px) {
+  html {
+    font-size: 93.75%;
   }
 }
 
-@media(max-width: 720px){
-  html{
+@media(max-width: 720px) {
+  html {
     font-size: 87.5%;
   }
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: Inter, sans-serif;
-  background: var(--background);
+  background-color: var(--background);
   color: var(--text);
 }
 
 body, input, textarea, button {
-  font: 400 16px "Inter", sans-serif;
+  font: 400 1rem "Inter", sans-serif;
 }
 
 button {
@@ -47,13 +46,4 @@ button {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.container {
-  height: 100vh;
-  max-width: 992px;
-  margin: 0 auto;
-  padding: 2.5rem 2rem;
-  display: flex;
-  flex-direction: column;
 }
